Lots of findbugs fixes.